--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,2 @@
 theme: jekyll-theme-architect
-title: to the most inspiring people... the Carpentries community!
+title: a place to organize my thoughts!
